--- a/src/main/java/OOAD/MainForm.form
+++ b/src/main/java/OOAD/MainForm.form
@@ -52,7 +52,7 @@
           </grid>
         </children>
       </grid>
-      <grid id="dc83c" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="dc83c" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="30" left="10" bottom="10" right="0"/>
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="2" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -201,30 +201,21 @@
               </grid>
             </children>
           </grid>
-          <grid id="40b40" binding="Canvas" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="4a843" class="OOAD.Canvas" binding="canvsAsarea" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="10"/>
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <minimum-size width="700" height="-1"/>
                 <preferred-size width="700" height="-1"/>
                 <maximum-size width="2147483647" height="-1"/>
               </grid>
             </constraints>
             <properties>
-              <autoscrolls value="true"/>
               <background color="-1"/>
-              <foreground color="-1966104"/>
             </properties>
             <border type="none"/>
             <children/>
           </grid>
-          <hspacer id="28149">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="10" height="-1"/>
-              </grid>
-            </constraints>
-          </hspacer>
         </children>
       </grid>
     </children>
