--- a/src/main/java/OOAD/MainForm.form
+++ b/src/main/java/OOAD/MainForm.form
@@ -201,8 +201,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="4a843" class="OOAD.Canvas" binding="canvasArea" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="10"/>
+          <grid id="4a843" class="OOAD.Canvas" binding="canvasArea" layout-manager="GridBagLayout">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <minimum-size width="700" height="-1"/>
@@ -211,6 +210,7 @@
               </grid>
             </constraints>
             <properties>
+              <autoscrolls value="true"/>
               <background color="-1"/>
               <foreground color="-1"/>
             </properties>
